--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,8 @@ body {
     background-color: #F5F5F5;
     padding: 0 100px;
 }
-#navbar{
+
+#navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,3 +22,34 @@ body {
     border-radius: 8px;
 }
 
+
+#hero-section {
+    border-radius: 24px;
+
+    background-color: rgb(198, 228, 214);
+    padding: 80px 100px 80px 100px;
+    display: flex;
+    gap: 64px;
+    justify-content: center;
+    align-items: center;
+}
+
+#hero-name {
+    color: rgba(14, 14, 14, 0.5);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#hero-title {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+#hero-btn {
+    border-radius: 8px;
+    color: white;
+    border: none;
+    background-color: rgb(0, 106, 80);
+    padding: 10px 28px;
+    margin: 24px 0px;
+}
