--- a/style/style.css
+++ b/style/style.css
@@ -53,3 +53,37 @@ body {
     padding: 10px 28px;
     margin: 24px 0px;
 }
+
+
+/* Mission start */
+#mission {
+    padding: 40px 0;
+}
+
+#mission>h1 {
+    font-size: 36px;
+}
+
+.mission-class {
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background-color: rgb(255, 255, 255);
+    /* margin: 0px 24px; */
+    width: 260px;
+    height: 216px;
+    padding: 24px 24px;
+}
+
+.mission-class > h3 {
+    font-size: 16px;
+}
+.mission-class > p{
+    font-size: 12px;
+    font-weight: 400;
+}
+
+#mission-container{
+    display: flex;
+    gap: 30px;
+}
