--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    margin: auto;
     background-color: #F5F5F5;
     padding: 0 100px;
 }
@@ -15,7 +16,9 @@ body {
     align-items: center;
 }
 
+
 #border-btn {
+    color: rgb(0, 106, 80);
     margin: 0px 10px;
     padding: 10px 20px 10px 20px;
     border: 1px solid rgb(0, 106, 80);
@@ -88,12 +91,14 @@ body {
 
 #mission-container {
     display: flex;
+    justify-content: center;
     gap: 30px;
 }
 
 /* vission start */
 .vission {
     display: flex;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -166,8 +171,36 @@ body {
     background-color: rgb(255, 255, 255);
     position: relative;
 }
-#description-section > img{
+
+#description-section>img {
     position: absolute;
     left: 30px;
     top: 20px;
+}
+
+.news-card {
+    padding:48px 48px;
+    display: flex;
+    gap: 30px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 24px;
+    margin: 40px 0;
+}
+
+.news-btn {
+    padding: 13px 26px;
+    border-radius: 8px;
+    background-color: rgb(0, 106, 80);
+    color: white;
+   border: none;
+}
+
+.news-card-right{
+    padding:48px 48px;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 24px;
+    margin: 40px 0; 
 }
